# protobuf_demo

./: CMakeLists.txt
pb/: helloworld.proto
src/: helloworld.pb.cc  helloworld.pb.h  main.cpp
